--- a/Info-relay-implementation/benchmarl_conf/base_experiment.yaml
+++ b/Info-relay-implementation/benchmarl_conf/base_experiment.yaml
@@ -3,7 +3,7 @@ defaults:
   - _self_
 
 # The device for collection (e.g. cuda)
-sampling_device: "cuda:3"
+sampling_device: "cpu"
 # The device for training (e.g. cuda)
 train_device: "cuda:3"
 # The device for the replay buffer of off-policy algorithms (e.g. cuda).
@@ -58,7 +58,7 @@ on_policy_collected_frames_per_batch: 6000
 # Otherwise batching will be simulated and each env will be run sequentially or parallelly depending on parallel_collection.
 on_policy_n_envs_per_worker: 10
 # This is the number of times collected_frames_per_batch will be split into minibatches and trained
-on_policy_n_minibatch_iters: 45
+on_policy_n_minibatch_iters: 15 #45
 # In on-policy algorithms the train_batch_size will be equal to the on_policy_collected_frames_per_batch
 # and it will be split into minibatches with this number of frames for training
 on_policy_minibatch_size: 400
